10409: Fix spacing

--- a/web-client/src/styles/utility-classes.scss
+++ b/web-client/src/styles/utility-classes.scss
@@ -6,6 +6,10 @@
   gap: 8px;
 }
 
+.gap-105 {
+  gap: 12px;
+}
+
 .gap-2 {
   gap: 16px;
 }
